tcr: Implement unsharing